fix/todo-11 - image overflow hidden on cards

--- a/client/src/components/ramencard.css
+++ b/client/src/components/ramencard.css
@@ -40,6 +40,9 @@
 }
 
 .card-image-container {
-    background-color: grey;
-    height: 200px;
+    /* background-color: grey; */
+    width: 400px;
+    height: 250px;
+    overflow: hidden;
+    
 }
